2006-05-19  James Turner  <james@worldforge.org>
	
	* Eris/View.cpp: fix bug where the TLVE was unset when emitting
	  Avatar::GotCharacterEntity (causing problems in sear). Re-order
	  View::sight to set TLVE before computing entity visibility.

2006-05-19  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: when account is deleted, and the connection is
	  still live, send logout ops from the account and each active character.

2006-05-17  James Turner  <james@worldforge.org>

	* Eris/DeleteLaters.cpp: switch the delete later queue to be a deque
	  instead of a vector, and hence preserve order of items to be deleted.

2006-05-17  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: no longer disconnect the connection when logout
	  from the account completes.

2006-05-16  James Turner  <james@worldforge.org>

	* Eris/Account.cpp, Eris/Account.h, Eris/Avatar.cpp: initial work to
	  support client-directed deactivation of a character. This is work in
	  progress, but the API is intended to be final; comments are
	  welcome.

2006-05-15  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: modify the Logout op sent from Account, to
	  conform to the revised format.

2006-05-15  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Connection.cpp: Avoid an issue with modifying a deque after
	  it has been cleared.

	* bindings/polls/glib/PollGlib.h: Update glib poll to handle
	  changes in the timed event API.

2006-05-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Calendar.h: Remove Atlas include in favour of forward
	  declarations.

2006-05-02  James Turner  <james@worldforge.org>

	* Eris/Task.h: fix name() to return by reference, as intended; thanks
	  Erik.

	* test/viewTest.h, test/viewTest.cpp: add basic task test
	
	* test/testOutOfGame.cpp, test/testOutOfGame.h: add test for duplicate
	  account creation.
	  
	* test/testCalendar.cpp: add crude calendar code test

2006-05-01  James Turner  <james@worldforge.org>
